--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "next": "16.1.4",
