feat: Implement Sabre GDS Flight Search and Booking Flow
- Added Sabre authentication and API helper (lib/sabre.js)
- Implemented Flight Search API and UI with filters and professional layout
- Implemented Booking Flow with Passenger Details form
- Added PNR Creation API
- Secured credentials using environment variables

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
+    "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
