Update Calender and Other

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-helmet-async": "^2.0.5",
+    "tesseract.js": "^4.0.2",
     "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
